--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,13 @@
 <!--The content below is only a placeholder and can be replaced.-->
-<h3>I'm in the AppComponent!</h3>
-<hr>
-<app-servers></app-servers>
+<div class="container">
+  <div class="row">
+    <div class="col-xs-12">
+      <h3>I'm in the AppComponent!</h3>
+      <hr>
+      <!-- <div class="app-servers"></div> -->
+      <!-- <div app-servers></div> -->
+      <app-servers></app-servers>
+    </div>
+  </div>
+</div>
+
